tests/should_fail/bad_range_x_and_y.sm
initial foo
final bar

# fail because 5 < 10 and 20 < 50
region (10 50 5 20)

foo -- keys [ a ] --> bar

foo --
  winc "foo"
--> pre
